# project_euler

./: Cargo.toml  README.md
src/: aliquot_sum.rs  collatz.rs  continued_fractions.rs  counter.rs  factors.rs  fibonacci.rs  lib.rs  matrix.rs  num2word.rs  polygonal_numbers.rs  primes.rs  pythagorean_triple.rs  roman.rs  tools.rs  totient.rs  triangle_numbers.rs  unsigned.rs
src/cards/: mod.rs  playing_cards.rs  poker.rs
src/ciphers/: frequencies.rs  mod.rs  xor_cipher.rs
src/continued_fractions/: mod.rs  square_root.rs
src/monopoly/: mod.rs
