[package]
name = "project_euler"
version = "0.1.0"
authors = ["Olivier Chassé St-Laurent <oliviercsl@gmail.com>"]
edition = "2018"

[dependencies]
counter = "0.4"
chrono = "0.4"
itertools = "0.8"
lazy_static = "1.4.0"
num = "0.2.0"
permutohedron = "0.2"
peroxide = "0.18.1"
primal = "0.2.3"
rand = "0.7.2"
radixal = "0.2.0"
